--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
 [ ] 1. clean cache file photo
 [v] 2. camera function: landscape?(x) front camera? crop photo?(x)
 [v] 3. allow delete photo on create/ edit diary
-[ ] 4. photo too large handling
+[v] 4. photo too large handling
